--- a/css/layoutResponsive.css
+++ b/css/layoutResponsive.css
@@ -4,7 +4,15 @@
 
 
 
-* { font-family: "Trebuchet MS", Arial, Helvetica, sans-serif!important; font-size:1em;}
+
+
+
+
+
+* {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif!important;
+	font-size: 1em;
+}
 
 p {
 	margin-top: 0!important;
@@ -21,17 +29,6 @@ p.colum {
 	column-count: 2; /* Opera 11+*/
 	column-gap: 14px /* Opera 11+*/
 }
-
-
-
-
-
-
-
-
-
-
-
 
 #popupPanel-popup {
 	right: 0 !important;
@@ -81,7 +78,7 @@ p.colum {
 
 img { max-width: 100%; }
 
-.footerMargin { /*-margin-top: 20px!important;-*/}
+.footerMargin { margin-top: 20px!important; }
 
 .header {
 	height: 60px;
@@ -111,7 +108,7 @@ img { max-width: 100%; }
 
 .blogActual a {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size:2.125em;
+	font-size: 2.125em;
 	color: #373737!important;
 	text-decoration: none;
 	text-shadow: none!important;
@@ -177,7 +174,7 @@ img { max-width: 100%; }
 
 .notaPrincipal .imagen .titulo {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size:3.250em;
+	font-size: 3.250em;
 	color: #FFF;
 	float: left;
 	position: relative;
@@ -230,7 +227,7 @@ img { max-width: 100%; }
 .texto {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #5e5e5e;
-	font-size:0.875em;
+	font-size: 0.875em;
 	float: left;
 	line-height: 24px;
 }
@@ -275,7 +272,7 @@ img { max-width: 100%; }
 	margin-left: 10px;
 	margin-top: 0!important;
 	margin-bottom: 0!important;
-	font-size:0.813em;
+	font-size: 0.813em;
 }
 
 .nota .contentFechaComent .fecha img { float: left; }
@@ -290,7 +287,7 @@ img { max-width: 100%; }
 	margin-left: 10px;
 	margin-top: 0!important;
 	margin-bottom: 0!important;
-		font-size:0.813em;
+	font-size: 0.813em;
 }
 
 .nota .contentFechaComent .coment img { float: left; }
@@ -361,7 +358,7 @@ img { max-width: 100%; }
 .notaDestacada .texto2 {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #5e5e5e;
-	font-size:  0.875em;
+	font-size: 0.875em;
 	float: left;
 	line-height: 24px;
 }
@@ -409,7 +406,7 @@ img { max-width: 100%; }
 
 .notaPop .notaPrincipal .titulo {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size:2.500em;
+	font-size: 2.500em;
 	color: #373737;
 	float: left;
 	font-weight: bold;
@@ -455,7 +452,7 @@ img { max-width: 100%; }
 .notaPop .texto {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #5e5e5e;
-	font-size:0.875em;
+	font-size: 0.875em;
 	float: left;
 	line-height: 30px;
 	margin-top: 10px;
@@ -497,7 +494,7 @@ img { max-width: 100%; }
 }
 
 .contenedorBlogMore p {
-	font-size:2.375em;
+	font-size: 2.375em;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #006c54;
 	float: left;
@@ -516,7 +513,7 @@ img { max-width: 100%; }
 }
 
 .contenedorBlogMore .blogMore p {
-	font-size:1.125em!important;
+	font-size: 1.125em!important;
 	font-weight: bold!important;
 	float: left!important;
 	margin-top: 50px!important;
@@ -529,7 +526,6 @@ img { max-width: 100%; }
 	margin-top: 20px;
 	margin-left: 10px;
 	padding-bottom: 50px;
-
 }
 
 #panelOptions .contenedorBlogMore .blogMore {
@@ -540,7 +536,7 @@ img { max-width: 100%; }
 .margin40 { padding-bottom: 40px!important; }
 
 #panelOptions .contenedorBlogMore .blogMore p {
-	font-size:0.813em!important;
+	font-size: 0.813em!important;
 	font-weight: bold!important;
 	float: left!important;
 	margin-top: -7px!important;
@@ -597,7 +593,7 @@ img { max-width: 100%; }
 	filter: dropshadow(color=#363636, offx=-2, offy=2);
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #FFF!important;
-	font-size:2.000em;
+	font-size: 2.000em;
 	line-height: 30px;
 	text-transform: uppercase;
 	margin-left: 20px;
@@ -610,11 +606,16 @@ img { max-width: 100%; }
 /*--CONTENEDORES--*/
 
 
+
+
+
+
+
 .contentTit {
 	margin: auto;
 	font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
 	font-size: 3.125em;
-	text-align: left;
+	text-align: right;
 	font-weight: bold;
 	color: #c5c5c5;
 	width: 100%;
@@ -631,8 +632,7 @@ img { max-width: 100%; }
 	margin-top: 30px;
 }
 
-.logoHome img { /*width:40%;*/
-margin-left: 7px; }
+.logoHome img { /*width:40%;*/ margin-left: 7px; }
 
 .pop {
 	padding-top: 20px;
@@ -643,566 +643,23 @@ margin-left: 7px; }
 /*--CONTENEDORES--*/
 
 
+
+
+
+
+
 .ui-icon-delete { background-position: center!important; }
 
 .ui-icon { background-image: url(images/icons-cerrar.png)!important; }
 
 .ui-icon { background-size: auto!important; }
- @media (max-width:320px) {
-
-.contentTit {
-	margin: auto;
-	font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
-	font-size:1.250em;
-	text-align: right;
-	font-weight: bold;
-	color: #c5c5c5;
-	width: 100%;
-}
-
-.logo {
-	float: left;
-	margin-top: 13px;
-	position: relative;
-	z-index: 999;
-}
-
-.logoHome {
-	width: 280px;
-	margin: auto;
-	margin-top: 30px;
-}
-
-.tituloBlog p {
-	font-size: 0.750em;
-	line-height: 18px;
-	margin-left: 10px;
-	margin-top: 5px!important;
-}
-
-.tituloBlog {
-	width: 100%;
-	height: 50px;
-	float: left;
-	position: relative;
-	background-color: rgba(0,0,0,0.4);
-	margin-top: -55px;
-}
-
-.button {
-	display: block;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	text-decoration: none!important;
-	float: right;
-	color: #FFF!important;
-	text-shadow: none!important;
-	margin-right: 7px;
-	margin-left: 10px;
-	font-weight: normal!important;
-	font-size:0.750em;
-}
-
-.footerMargin { margin-top: 10px!important; }
-
-.bloque {
-	background-color: #FFF;
-	padding: 6px;
-	margin: 3px;
-}
-
-.footerBottons {
-	background-color: #414141;
-	margin-left: 5px;
-	margin-right: 5px;
-	height: 30px;
-	line-height: 30px;
-}
-
-.contenedorNotas {
-	width: 100%;
-	height: auto;
-	margin: auto;
-}
-
-.header {
-	height: 40px;
-	background-color: #E0E1DD;
-}
-
-.logo img { width: 70%; }
-
-#panelOptions .contenedorBlogMore {
-	margin-top: 0px;
-	margin-left: 10px;
-}
-
-.contenedorBlogMore p {
-	font-size: 1.750em;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #006c54;
-	float: left;
-	margin-bottom: 10px!important
-}
-
-#panelOptions .contenedorBlogMore .blogMore {
-	margin-bottom: 5px;
-	margin-left: -15px;
-}
-
-.margin40 { padding-bottom: 20px!important; }
-
-#panelOptions .contenedorBlogMore .blogMore p {
-	font-size: 0.688em!important;
-	font-weight: bold!important;
-	float: left!important;
-	margin-top: -7px!important;
-	color: #4c4c4c;
-	width: 200px;
-	margin-left: 5px;
-	float: right!important
-}
-
-.blogActual {
-	width: 100%;
-	text-align: center;
-	margin-top: -29px;
-	margin-left: 12px;
-}
-
-.blogActual a { font-size: 1.438em; }
-
-.notaPrincipal {
-	width: 100%;
-	float: left;
-	height: auto;
-	display: block;
-	background-color: #FFFFFF;
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-bottom: 10px;
-}
-
-.nota {
-	width: 100%;
-	float: left;
-	height: auto;
-	display: block;
-	background-color: #FFFFFF;
-	margin: 0px;
-	margin-bottom: 10px;
-	padding: 5px;
-	margin-left: 0px;
-}
-
-.notaDestacada {
-	width: 100%;
-	float: left;
-	height: auto;
-	display: block;
-	background-color: #FFFFFF;
-	margin: 0px;
-	margin-bottom: 10px;
-	padding: 5px;
-	margin-left: 0px;
-}
-
-.notaPrincipal .imagen .titulo {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size:1.250em;
-	color: #373737;
-	float: left;
-	position: relative;
-	z-index: 9999;
-	top: 0px;
-	padding: 5px;
-	font-weight: bold;
-	line-height: 22px;
-	text-shadow: none;
-	filter: none;
-}
-
-.notaPrincipal .imagen .contentFechaComent {
-	width: 95%;
-	float: left;
-	position: relative;
-	top: 0;
-	padding: 5px 10px;
-	font-size:0.750em;
-}
-
-.notaPrincipal .imagen .contentFechaComent .coment {
-	float: left;
-	color: #b2b2b2;
-}
-
-.notaPrincipal .imagen .contentFechaComent .fecha {
-	float: left;
-	color: #b2b2b2;
-	margin-right: 10px;
-}
-
-.notaPrincipal .imagen .contentFechaComent .fecha p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 3px!important;
-	margin-bottom: 0!important;
-	font-size: 0.750em;
-}
-
-.notaPrincipal .imagen .contentFechaComent .coment p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 3px!important;
-	margin-bottom: 0!important;
-	font-size:  0.750em;
-}
-
-.notaPrincipal .imagen {
-	height: auto;
-	width: 100%;
-	float: left;
-	position: relative;
-}
-
-.nota .titulo {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size: 0.688em;
-	color: #373737;
-	float: left;
-	font-weight: bold;
-	line-height: 15px;
-	margin-top: 5px;
-}
-
-.texto {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #5e5e5e;
-	font-size:0.750em;
-	float: left;
-	line-height: 14px;
-}
-
-.texto p {
-	margin-top: 0!important;
-	margin-bottom: 0!important;
-	padding: 10px;
-}
-
-.notaDestacada .imagen {
-	height: 50%;
-	width: 50%;
-	float: right;
-	position: relative;
-}
-
-.notaDestacada .titulo {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size:1.375em;
-	color: #373737;
-	float: left;
-	font-weight: bold;
-	line-height: 26px;
-	width: 40%;
-}
-
-.notaDestacada .contentFechaComent {
-	width: 347px;
-	float: left;
-	margin-top: 6px;
-}
-
-.notaDestacada .contentFechaComent .fecha {
-	float: left;
-	color: #b2b2b2;
-	margin-right: 10px;
-}
-
-.notaDestacada .contentFechaComent .fecha p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 3px!important;
-	margin-bottom: 0!important;
-}
-
-.notaDestacada .contentFechaComent .fecha img { float: left; }
-
-.notaDestacada .contentFechaComent .coment {
-	float: left;
-	color: #b2b2b2;
-}
-
-.notaDestacada .contentFechaComent .coment p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 3px!important;
-	margin-bottom: 0!important;
-}
-
-.notaDestacada .contentFechaComent .coment img { float: left; }
-
-.notaDestacada .texto {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #5e5e5e;
-	font-size:0.875em;
-	float: left;
-	line-height: 24px;
-	width: 330px;
-	margin-top: 10px;
-}
-
-.notaDestacada .texto2 {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #5e5e5e;
-	font-size:0.875em;
-	float: left;
-	line-height: 24px;
-}
-
-.notaDestacada .texto p {
-	margin-top: 0!important;
-	margin-bottom: 0!important;
-	padding: 0px;
-	width: 330px;
-	float: left;
-}
-
-.notaDestacada .texto2 p {
-	margin-top: 0!important;
-	margin-bottom: 0!important;
-	padding: 0px;
-}
-
-.notaPop .notaPrincipal {
-	width: 100%;
-	float: left;
-	height: auto;
-	display: block;
-	background-color: #FFFFFF;
-	margin: 5px;
-	padding: 5px;
-}
-
-.notaPop .notaPrincipal .imagen {
-	height: auto;
-	width: 100%;
-	float: left;
-	position: relative;
-	overflow: hidden;
-}
-
-.notaPop .notaPrincipal .titulo {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-size:1.250em;
-	color: #373737;
-	float: left;
-	font-weight: bold;
-	line-height: 24px;
-	margin-top: 5px;
-}
-
-.notaPop .notaPrincipal .contentFechaComent {
-	width: 100%;
-	float: left;
-	margin-top: 10px;
-}
-
-.notaPop .notaPrincipal .contentFechaComent .fecha {
-	float: left;
-	color: #b2b2b2;
-	margin-right: 10px;
-}
-
-.notaPop .notaPrincipal .contentFechaComent .fecha p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 0!important;
-	margin-bottom: 0!important;
-	font-size:0.750em;
-}
-
-.notaPop .notaPrincipal .contentFechaComent .fecha img {
-	float: left;
-	width: 18px;
-}
-
-.notaPop .notaPrincipal .contentFechaComent .coment {
-	float: left;
-	color: #b2b2b2;
-}
-
-.notaPop .notaPrincipal .contentFechaComent .coment p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 0!important;
-	margin-bottom: 0!important;
-	font-size:0.750em;
-}
-
-.notaPop .notaPrincipal .contentFechaComent .coment img {
-	float: left;
-	width: 18px;
-}
-
-.notaPop .texto {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #5e5e5e;
-	font-size:0.750em;
-	float: left;
-	line-height: 20px;
-	margin-top: 10px;
-	width: 95%;
-}
-
-.notaPop .texto p {
-	margin-top: 0!important;
-	margin-bottom: 0!important;
-	padding: 0px;
-	float: left;
-}
-
-.contenedorBlogMore {
-	float: left;
-	width: 360px;
-	margin-top: 20px;
-	margin-left: 0px;
-}
-
-.contenedorBlogMore .blogMore { float: left; }
-
-.contenedorBlogMore .blogMore img {
-	float: left;
-	width: 50px!important;
-	margin: 10px;
-	margin-left: 2px;
-	-webkit-box-shadow: 0px 0px 15px 0px #666;
-	box-shadow: 0px 0px 15px 0px #666;
-	border: 6px #fff solid;
-}
-
-.contenedorBlogMore .blogMore p {
-	font-size:0.750em!important;
-	font-weight: bold!important;
-	float: left!important;
-	margin-top: 30px!important;
-	color: #4c4c4c;
-	width: 100px;
-	margin-left: 0px;
-}
-
-.popAdd {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 12px;
-}
-
-#popupAdd {
-	width: 200px!important;
-	padding: 10px;
-}
-
-.nota .contentFechaComent .fecha p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 3px!important;
-	margin-bottom: 0!important;
-	font-size:0.813em;
-}
-
-.nota .contentFechaComent .coment p {
-	float: left;
-	margin-left: 10px;
-	margin-top: 3px!important;
-	margin-bottom: 0!important;
-	font-size:0.813em;
-}
-
-.ui-icon-arrow-r { background-position: -129px 0px; }
-
-#popupSelcBlog-popup { top: 40px!important; }
-
-.ui-header {
-	float: none!important;
-	width: 100%!important
-}
-! .ui-grid-b {
-float:none!important;
-width:100%!important;
-padding: 0%!important;
-}
-.ui-footer {
-	float: none;
-	width: 100%!important;
-	margin-top:0!important;
-}
-}
- @media (min-width:321px) and (max-width:768px) {
-
-.contentTit {
-	margin: auto;
-	font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
-	font-size:2.500em;
-	text-align: right;
-	font-weight: bold;
-	color: #c5c5c5;
-	width: 100%;
-}
-
-.logoHome {
-	width: 100%;
-	margin: auto;
-	margin-top: 30px;
-}
-
-.tituloBlog p {
-	font-size:0.125em;
-	line-height: 25px;
-	margin-left: 10px;
-	margin-top: 5px!important;
-}
-
-.tituloBlog {
-	width: 100%;
-	height: 60px;
-	float: left;
-	position: relative;
-	background-color: rgba(0,0,0,0.4);
-	margin-top: -65px;
-}
-
-.button {
-	display: block;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	text-decoration: none!important;
-	float: right;
-	color: #FFF!important;
-	text-shadow: none!important;
-	margin-right: 13px;
-	margin-left: 25px;
-	font-weight: normal!important;
-	font-size:1.375em;
-}
-
-.footerMargin { margin-top: 20px!important; }
-
-.ui-header {
-	float: none;
-	width: 100%!important
-}
-
-.ui-grid-b {
-	float: none;
-	width: 100%!important;
-	padding: 0%!important;
-}
-
-.ui-footer {
-	float: none;
-	width: 100%!important;
-	margin-top:0!important;
-}
-}
 
 /*---NUEVO---*/
+
+
+
+
+
 
 
 .bloque1 {
@@ -1221,22 +678,76 @@ padding: 0%!important;
 .ui-grid-b > div { margin: 0.5%!important }
 
 .ui-header {
-	float: right;
-	width: 40%
+	float: none;
+	width: 100%!important
 }
 
 .ui-grid-b {
-	float: left;
-	width: 60%;
+	float: none;
+	width: 100%!important;
+	padding: 0%!important;
 }
 
 .ui-footer {
-	float: right;
-	width: 40%;
-	margin-top:40%;
+	float: none;
+	width: 100%!important;
+	margin-top: 0!important;
 }
 
 .ui-content { padding: 5px!important; }
-.ui-overlay-a{
-	background-color:rgba(0,0,0,0.3)!important;
+
+.ui-overlay-a { background-color: rgba(0,0,0,0.3)!important; }
+
+#popLogIn { width: 400px; }
+
+.tituloPop {
+	width: 100%;
+	font-size: 32px;
+	color: #666666;
+	line-height: 60px;
+}
+
+.subTitPop {
+	width: 100%;
+	font-size: 12px;
+}
+
+.btnConect {
+	margin-top: 20px;
+	width: 100%;
+}
+
+.separador {
+	margin-top: 20px;
+	width: 100%;
+}
+
+.linea {
+	float: left;
+	margin-top: 8px;
+	width: 41%;
+	height: 1px;
+	background-color: #CCCCCC;
+}
+
+.left { margin-left: 5% }
+
+.right { margin-right: 5% }
+
+.or {
+	float: left;
+	width: 8%;
+}
+
+.blockPop{}
+
+.blockPop .label{float:left; margin-right:12px; width:75px!important; height:50px; line-height:50px; color:#666666; font-size:14px!important; text-align:right;}
+.blockPop .label label{
+	display:inline!important;
+}
+
+.blockPop .input{float:left; margin-right:10px; width:225px!important; height:50px;}
+
+.login{
+	position:absolute; padding:20px 20px 0px 0px; width:100%; z-index:100;
 }
